--- a/frontend/views/404.html
+++ b/frontend/views/404.html
@@ -15,7 +15,7 @@
             <div class="container mx-auto px-4 py-3">
                 <div class="flex flex-col md:flex-row items-center justify-between">
                     <div class="flex items-center mb-4 md:mb-0">
-                        <img src="../public/images/logo.svg" alt="MibiTech Logo" class="h-12 w-auto mr-3">
+                        <img src="../public/images/logo.png" alt="MibiTech Logo" class="h-12 w-auto mr-3">
                         <h1 class="text-2xl font-bold text-blue-600">MibiTech</h1>
                     </div>
                     <nav class="w-full md:w-auto">
