--- a/frontend/views/blog.html
+++ b/frontend/views/blog.html
@@ -16,7 +16,7 @@
                 <div class="flex flex-col md:flex-row items-center justify-between">
                     <div class="flex items-center mb-4 md:mb-0">
                         <img src="../public/images/logo.png" alt="MibiTech Logo" class="h-12 w-auto mr-3">
-                        <h1 class="text-2xl font-bold text-blue-600">MibiTech</h1>
+                        <h1 class="text-2xl font-bold text-blue-600">Mibitech Soluções Digitais</h1>
                     </div>
                     <nav class="w-full md:w-auto">
                         <ul class="flex flex-wrap justify-center space-x-1 md:space-x-6">
