Ajuste de variaveis de ambiente window.env

--- a/frontend/views/index.html
+++ b/frontend/views/index.html
@@ -188,6 +188,9 @@
         </footer>
     </div>
 
+    <!-- Carrega as variáveis de ambiente primeiro -->
+    <script src="../public/js/env-config.js"></script>
+    <!-- Carrega os scripts da aplicação -->
     <script type="module" src="../public/js/main.js"></script>
 </body>
 </html>
