--- a/frontend/views/test-api.html
+++ b/frontend/views/test-api.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="app-config" content='{"API_BASE_URL":"http://apirest.mibitech.com.br:8000"}'>
+    <meta name="app-config" content='{"API_BASE_URL":"https://apirest.mibitech.com.br:8000"}'>
     <title>Teste API - MibiTech</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
