--- a/frontend/views/contato.html
+++ b/frontend/views/contato.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="app-config" content='{"API_BASE_URL":"https://apirest.mibitech.com.br:8000"}'>
+    <meta name="app-config" content='{"API_BASE_URL":"http://apirest.mibitech.com.br:8000"}'>
     <title>Contato - MibiTech</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../public/css/styles.css">
